fix: disable scrollbar

--- a/src/frontend/styles/globals.css
+++ b/src/frontend/styles/globals.css
@@ -2,18 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-	width: 5px;
-}
-::-webkit-scrollbar-track {
-	background: #cbd5e0;
-}
-::-webkit-scrollbar-thumb {
-	background: #2d3748;
-}
-::-webkit-scrollbar-thumb:hover {
-	background: #718096;
-}
+scrollbar-width: none;
 
 .tooltip .tooltip-text {
 	@apply invisible p-4 absolute z-50 rounded-lg text-white border-2 border-green-200;
